...
            .font(.footnote)
            .lineLimit(1, reservesSpace: true)
            .padding(.horizontal, 8)
            .padding(.vertical, 6)
            .background(Color.white)
            .clipShape(Capsule())
            .accessibilityIdentifier("recipe.gridItem.title")
    }
    
    @ViewBuilder
    var prepHolder: some View {
        if recipe.totalTime != 0 {
            HStack {
...
