...
    
    var recipeTitle: some View {
        Text(viewModel.title)
            .font(.title)
            .fontWeight(.bold)
            .frame(maxWidth: .infinity, alignment: .leading)
            .accessibilityIdentifier("details.title")
    }
    
    var servings: some View {
        Text("Serves \(Int(viewModel.servings))")
            .font(.body)
            .opacity(0.8)
...
